Front: fix layout issue

--- a/src/css/section-front.less
+++ b/src/css/section-front.less
@@ -268,8 +268,12 @@
       margin-right: 8px;
       display: block;
 
-      height: 100%;
-      width: auto;
+      img {
+        height: 75px;
+        width: auto;
+        position: relative;
+        top: 7px;
+      }
     }
   }
 }
@@ -328,6 +332,11 @@
       h1 {
         .words {
           text-align: left;
+        }
+
+        .date-upright img {
+          width: auto;
+          height: 131px;
         }
 
         .vote-number {
